Fix the image overflow the content in mobile

--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -270,4 +270,6 @@ figure
     &.left,
     &.right
       width: 100%;
+      margin: 0;
+      padding: 1em 40px;
       float: none!important;
